e2e/networking/simple-endpoint/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
status:
  readyReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
